dockerfile and docker compose

--- a/backend/crates/config/Cargo.toml
+++ b/backend/crates/config/Cargo.toml
@@ -9,3 +9,4 @@ haste-fhir-model = { path = "../fhir-model" }
 haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
     "derive",
 ] }
+tracing = "0.1.41"
