--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,32 @@ services:
       - POSTGRES_DB=haste_health
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+
+  hastehealth-server:
+    image: hastehealth
+    container_name: hastehealth-server
+    ports:
+      - 3000:3000
+    command:
+      - server
+      - start
+    environment:
+      - CERTIFICATION_DIR=certifications
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/haste_health
+      - API_URI=http://localhost:3000
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=elastic
+      - ADMIN_APP_REDIRECT_URI=http://*.localhost:3001
+    
+  hastehealth-worker:
+    image: hastehealth
+    container_name: hastehealth-worker
+    command:
+      - worker
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/haste_health
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=elastic
