--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,6 +26,7 @@ jobs:
           # This changes all uppercase characters to lowercase.
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
 
+
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$GITHUB_REF_NAME
 
@@ -33,7 +34,7 @@ jobs:
           docker buildx build . \
            --file=docker/haste-health.dockerfile \
            --platform linux/amd64 \
-           --tag $IMAGE_ID:$VERSION \
+           --tag $IMAGE_ID:$GITHUB_REF_NAME \
            --tag $IMAGE_ID:latest \
            --label "runnumber=${GITHUB_RUN_ID}" \
            --push
