--- a/frontend/packages/website/blog/tags.yml
+++ b/frontend/packages/website/blog/tags.yml
@@ -1,19 +1,9 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
+hastehealth:
+  label: Haste Health
+  permalink: /
+  description: HasteHealth tag description
 
 hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
-
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
-
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
+  label: Getting Started
+  permalink: /docs/Getting Started
+  description: Getting started
