--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -23,7 +23,8 @@
     "@codemirror/state": ">=6.0.0",
     "@codemirror/theme-one-dark": ">=6.0.0",
     "@codemirror/view": ">=6.0.0",
-    "react": "^18.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-import-attributes": "^7.26.0",
@@ -56,8 +57,8 @@
     "codemirror": "^6.0.1",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "rollup": "^4.34.9",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
