--- a/backend/crates/fhir-search/Cargo.toml
+++ b/backend/crates/fhir-search/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-search"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health FHIR search library."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 chrono = "0.4.41"
