--- a/backend/crates/access-control/Cargo.toml
+++ b/backend/crates/access-control/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-access-control"
 version = "0.1.1"
 edition = "2024"
+description = "Access control utilities for Haste Health FHIR server and clients."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 haste-fhir-client = { path = "../fhir-client" }
