--- a/backend/crates/artifacts/Cargo.toml
+++ b/backend/crates/artifacts/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-artifacts"
 version = "0.1.1"
 edition = "2024"
+description = "FHIR artifacts for Haste Health."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 once_cell = "1.21.3"
