--- a/backend/crates/config/Cargo.toml
+++ b/backend/crates/config/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-config"
 version = "0.1.1"
 edition = "2024"
+description = "Configuration utilities for Haste Health FHIR server and clients."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 dotenvy = "0.15.7"
