--- a/backend/crates/fhir-client/Cargo.toml
+++ b/backend/crates/fhir-client/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-client"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health FHIR client implementation."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [features]
 axum = ["dep:axum"]
