--- a/backend/crates/fhir-model/Cargo.toml
+++ b/backend/crates/fhir-model/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-model"
 version = "0.1.1"
 edition = "2024"
+description = "FHIR data model for Haste Health."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [features]
 sqlx = ["dep:sqlx"]
