--- a/backend/crates/fhir-operation-error-derive/Cargo.toml
+++ b/backend/crates/fhir-operation-error-derive/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-operation-error-derive"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health FHIR operation error derive macros."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [lib]
 proc-macro = true
