--- a/backend/crates/fhir-operation-error/Cargo.toml
+++ b/backend/crates/fhir-operation-error/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-operation-error"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health FHIR operation error handling."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [features]
 derive = ["dep:haste-fhir-operation-error-derive"]
