--- a/backend/crates/fhir-serialization-json-derive/Cargo.toml
+++ b/backend/crates/fhir-serialization-json-derive/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-serialization-json-derive"
 version = "0.1.1"
 edition = "2024"
+description = "FHIR JSON serialization derive macros for Haste Health."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [lib]
 proc-macro = true
