--- a/backend/crates/fhir-serialization-json/Cargo.toml
+++ b/backend/crates/fhir-serialization-json/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-serialization-json"
 version = "0.1.1"
 edition = "2024"
+description = "FHIR JSON serialization utilities for Haste Health."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [features]
 derive = ["dep:haste-fhir-serialization-json-derive"]
