--- a/backend/crates/fhir-terminology/Cargo.toml
+++ b/backend/crates/fhir-terminology/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhir-terminology"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health FHIR terminology services library."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 dashmap = "6.1.0"
