--- a/backend/crates/fhirpath/Cargo.toml
+++ b/backend/crates/fhirpath/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-fhirpath"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health FHIRPath evaluation library."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 dashmap = "6.1.0"
