--- a/backend/crates/hl7v2/Cargo.toml
+++ b/backend/crates/hl7v2/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-hl7v2"
 version = "0.1.1"
 edition = "2024"
+description = "Haste Health HL7v2 parsing and serialization library."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [dependencies]
 haste-fhir-operation-error = { path = "../fhir-operation-error" }
