--- a/backend/crates/macro-loads/Cargo.toml
+++ b/backend/crates/macro-loads/Cargo.toml
@@ -2,6 +2,9 @@
 name = "haste-macro-loads"
 version = "0.1.1"
 edition = "2024"
+description = "Macro loads for Haste Health."
+license = "GPL-3.0"
+homepage = "https://haste.health"
 
 [lib]
 proc-macro = true
