--- a/backend/crates/artifacts/Cargo.toml
+++ b/backend/crates/artifacts/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "haste-artifacts"
-version = "0.1.1"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 description = "FHIR artifacts for Haste Health."
-license = "GPL-3.0"
-homepage = "https://haste.health"
+license = { workspace = true }
+homepage = { workspace = true }
 
 [dependencies]
 once_cell = "1.21.3"
