--- a/backend/crates/codegen/Cargo.toml
+++ b/backend/crates/codegen/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "haste-codegen"
-version = "0.1.1"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 description = "Code generation utilities for Haste Health FHIR server and clients."
-license = "GPL-3.0"
-homepage = "https://haste.health"
+license = { workspace = true }
+homepage = { workspace = true }
 
 [dependencies]
 indexmap = "2.10.0"
