--- a/backend/crates/hl7v2/Cargo.toml
+++ b/backend/crates/hl7v2/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "haste-hl7v2"
-version = "0.1.1"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 description = "Haste Health HL7v2 parsing and serialization library."
-license = "GPL-3.0"
-homepage = "https://haste.health"
+license = { workspace = true }
+homepage = { workspace = true }
 
 [dependencies]
 haste-fhir-operation-error = { path = "../fhir-operation-error" }
