--- a/backend/crates/jwt/Cargo.toml
+++ b/backend/crates/jwt/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "haste-jwt"
-version = "0.1.1"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 description = "JWT utilities and claims for Haste Health."
-license = "GPL-3.0"
-homepage = "https://haste.health"
+license = { workspace = true }
+homepage = { workspace = true }
 
 [features]
 sqlx = ["dep:sqlx"]
