--- a/backend/crates/reflect-derive/Cargo.toml
+++ b/backend/crates/reflect-derive/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "haste-reflect-derive"
-version = "0.1.1"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 description = "Reflection derive macros for Haste Health."
-license = "GPL-3.0"
-homepage = "https://haste.health"
+license = { workspace = true }
+homepage = { workspace = true }
 
 [lib]
 proc-macro = true
