--- a/backend/crates/reflect/Cargo.toml
+++ b/backend/crates/reflect/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "haste-reflect"
-version = "0.1.1"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
 description = "Reflection utilities for Haste Health."
-license = "GPL-3.0"
-homepage = "https://haste.health"
+license = { workspace = true }
+homepage = { workspace = true }
 
 [features]
 derive = ["dep:haste-reflect-derive"]
