--- a/backend/crates/artifacts/Cargo.toml
+++ b/backend/crates/artifacts/Cargo.toml
@@ -8,8 +8,10 @@ homepage = { workspace = true }
 
 [dependencies]
 once_cell = "1.21.3"
-haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
-haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
+haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
+    "sqlx",
+] }
+haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
 rust-embed = { version = "8.9.0", features = [
     "compression",
     "include-exclude",
