--- a/backend/crates/config/Cargo.toml
+++ b/backend/crates/config/Cargo.toml
@@ -8,8 +8,8 @@ homepage = { workspace = true }
 
 [dependencies]
 dotenvy = "0.15.7"
-haste-fhir-model = { path = "../fhir-model" }
-haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
     "derive",
 ] }
 tracing = "0.1.41"
