--- a/backend/crates/fhir-client/Cargo.toml
+++ b/backend/crates/fhir-client/Cargo.toml
@@ -14,15 +14,15 @@ http = ["dep:reqwest"]
 axum = { version = "0.8.4", optional = true }
 http = "1.3.1"
 json-patch = "4.0.0"
-haste-fhir-model = { path = "../fhir-model" }
-haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
     "derive",
 ] }
-haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
-haste-jwt = { path = "../jwt" }
+haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
+haste-jwt = { path = "../jwt", version = "0.*" }
 reqwest = { version = "0.12", optional = true }
 thiserror = "2.0.12"
-haste-reflect = { path = "../reflect" }
+haste-reflect = { path = "../reflect", version = "0.*" }
 serde_json = "1.0.145"
 
 [dev-dependencies]
