--- a/backend/crates/fhir-generated-ops/Cargo.toml
+++ b/backend/crates/fhir-generated-ops/Cargo.toml
@@ -7,6 +7,8 @@ license = { workspace = true }
 homepage = { workspace = true }
 
 [dependencies]
-haste-fhir-model = { path = "../fhir-model" }
-haste-fhir-operation-error = { path = "../fhir-operation-error" }
-haste-fhir-ops = { path = "../fhir-ops", features = ["derive"] }
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
+haste-fhir-ops = { path = "../fhir-ops", version = "0.*", features = [
+    "derive",
+] }
