--- a/backend/crates/fhir-model/Cargo.toml
+++ b/backend/crates/fhir-model/Cargo.toml
@@ -12,10 +12,10 @@ sqlx = ["dep:sqlx"]
 [dependencies]
 chrono = "0.4.41"
 once_cell = "1.21.3"
-haste-fhir-serialization-json = { path = "../fhir-serialization-json", features = [
+haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*", features = [
     "derive",
 ] }
-haste-reflect = { path = "../reflect", features = ["derive"] }
+haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
