--- a/backend/crates/fhir-ops/Cargo.toml
+++ b/backend/crates/fhir-ops/Cargo.toml
@@ -10,7 +10,7 @@ homepage = { workspace = true }
 derive = ["dep:haste-fhir-ops-derive"]
 
 [dependencies]
-haste-fhir-model = { path = "../fhir-model" }
-haste-fhir-operation-error = { path = "../fhir-operation-error" }
-haste-fhir-ops-derive = { path = "../fhir-ops-derive", optional = true }
-haste-jwt = { path = "../jwt" }
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
+haste-fhir-ops-derive = { path = "../fhir-ops-derive", version = "0.*", optional = true }
+haste-jwt = { path = "../jwt", version = "0.*" }
