--- a/backend/crates/fhir-serialization-json/Cargo.toml
+++ b/backend/crates/fhir-serialization-json/Cargo.toml
@@ -10,6 +10,6 @@ homepage = { workspace = true }
 derive = ["dep:haste-fhir-serialization-json-derive"]
 
 [dependencies]
-haste-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", optional = true }
+haste-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", version = "0.*", optional = true }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
