--- a/backend/crates/fhirpath/Cargo.toml
+++ b/backend/crates/fhirpath/Cargo.toml
@@ -10,16 +10,16 @@ homepage = { workspace = true }
 dashmap = "6.1.0"
 jiff = "0.2.15"
 once_cell = "1.21.3"
-haste-fhir-model = { path = "../fhir-model" }
-haste-reflect = { path = "../reflect" }
-haste-reflect-derive = { path = "../reflect-derive" }
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-reflect = { path = "../reflect", version = "0.*" }
+haste-reflect-derive = { path = "../reflect-derive", version = "0.*" }
 peg = "0.8.5"
 thiserror = "2.0.12"
 
 [dev-dependencies]
 criterion = "0.7"
 insta = "1.43.1"
-haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
+haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
 
 [[bench]]
 name = "fp_performance"
