--- a/backend/crates/jwt/Cargo.toml
+++ b/backend/crates/jwt/Cargo.toml
@@ -11,8 +11,8 @@ sqlx = ["dep:sqlx"]
 reflect = ["dep:haste-reflect"]
 
 [dependencies]
-haste-fhir-model = { path = "../fhir-model" }
-haste-fhir-operation-error = { path = "../fhir-operation-error" }
-haste-reflect = { path = "../reflect", optional = true }
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
+haste-reflect = { path = "../reflect", version = "0.*", optional = true }
 serde = "1.0.228"
 sqlx = { version = "0.8", optional = true }
