--- a/backend/crates/repository/Cargo.toml
+++ b/backend/crates/repository/Cargo.toml
@@ -9,13 +9,15 @@ homepage = { workspace = true }
 [dependencies]
 moka = { version = "0.12.11", features = ["future"] }
 nanoid = "0.4.0"
-haste-fhir-client = { path = "../fhir-client" }
-haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
-haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
+haste-fhir-client = { path = "../fhir-client", version = "0.*" }
+haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
+    "sqlx",
+] }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
     "derive",
 ] }
-haste-jwt = { path = "../jwt", features = ["sqlx"] }
-haste-reflect = { path = "../reflect", features = ["derive"] }
+haste-jwt = { path = "../jwt", version = "0.*", features = ["sqlx"] }
+haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
 regex = "1.12.2"
 serde = "1.0.219"
 serde_json = "1.0.142"
