--- a/backend/crates/artifacts/Cargo.toml
+++ b/backend/crates/artifacts/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "haste-artifacts"
+publish = false
+description = "FHIR artifacts for Haste Health."
 version = { workspace = true }
 edition = { workspace = true }
-description = "FHIR artifacts for Haste Health."
 license = { workspace = true }
 homepage = { workspace = true }
 
