use bsd-3 license for packages

--- a/backend/crates/server/Cargo.toml
+++ b/backend/crates/server/Cargo.toml
@@ -2,9 +2,9 @@
 name = "haste-server"
 publish = false
 description = "Haste Health server application."
+license = "GPL-3.0"
 version = { workspace = true }
 edition = { workspace = true }
-license = { workspace = true }
 homepage = { workspace = true }
 
 
