--- a/backend/crates/fhir-search/Cargo.toml
+++ b/backend/crates/fhir-search/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "haste-fhir-search"
+publish = false
 version = { workspace = true }
 edition = { workspace = true }
 description = "Haste Health FHIR search library."
