--- a/backend/crates/fhir-terminology/Cargo.toml
+++ b/backend/crates/fhir-terminology/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "haste-fhir-terminology"
+publish = false
 version = { workspace = true }
 edition = { workspace = true }
 description = "Haste Health FHIR terminology services library."
