--- a/.github/workflows/publish_packages.yml
+++ b/.github/workflows/publish_packages.yml
@@ -6,10 +6,9 @@ on:
       - main
 
 jobs:
-
   # Release unpublished packages.
-  release-plz-release:
-    name: Release-plz release
+  crate-io-release:
+    name: Crates IO release
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -26,14 +25,15 @@ jobs:
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
+          manifest_path: ./backend/Cargo.toml
           command: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
 
   # Create a PR with the new versions and changelog, preparing the next release.
-  release-plz-pr:
-    name: Release-plz PR
+  crate-version-pr:
+    name: Crates Version PR
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -47,9 +47,30 @@ jobs:
       - name: Run release-plz
         uses: release-plz/action@v0.5
         with:
+          manifest_path: ./backend/Cargo.toml
           command: release-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
 
-tip
+  npm-publish:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - uses: actions/checkout@v5
+      # Setup .npmrc file to publish to npm
+      - name: EnableCorePack
+        run: corepack enable
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "23.x"
+          registry-url: "https://registry.npmjs.org"
+      - run: pnpm install
+        working-directory: ./frontend
+      - run: pnpm -r publish --access public
+        working-directory: ./frontend
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
