--- a/backend/crates/artifacts/Cargo.toml
+++ b/backend/crates/artifacts/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "haste-artifacts"
+publish = false
+description = "FHIR artifacts for Haste Health."
 version = { workspace = true }
 edition = { workspace = true }
-description = "FHIR artifacts for Haste Health."
 license = { workspace = true }
 homepage = { workspace = true }
 
 [dependencies]
 once_cell = "1.21.3"
-haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
-haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
+haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
+    "sqlx",
+] }
+haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
 rust-embed = { version = "8.9.0", features = [
     "compression",
     "include-exclude",
