--- a/backend/crates/codegen/Cargo.toml
+++ b/backend/crates/codegen/Cargo.toml
@@ -1,19 +1,20 @@
 [package]
 name = "haste-codegen"
+publish = false
+description = "Code generation utilities for Haste Health FHIR server and clients."
 version = { workspace = true }
 edition = { workspace = true }
-description = "Code generation utilities for Haste Health FHIR server and clients."
 license = { workspace = true }
 homepage = { workspace = true }
 
 [dependencies]
 indexmap = "2.10.0"
 once_cell = "1.21.3"
-haste-fhir-generated-ops = { path = "../fhir-generated-ops" }
-haste-fhir-model = { path = "../fhir-model" }
-haste-fhir-operation-error = { path = "../fhir-operation-error" }
-haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
-haste-fhir-terminology = { path = "../fhir-terminology" }
+haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
+haste-fhir-model = { path = "../fhir-model", version = "0.*" }
+haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
+haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
+haste-fhir-terminology = { path = "../fhir-terminology", version = "0.*" }
 proc-macro2 = "1.0.95"
 quote = "1.0.40"
 regex = "1.11.1"
