use latest wrangler ver

--- a/.github/workflows/publish_sites.yml
+++ b/.github/workflows/publish_sites.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build & Deploy Worker
         uses: cloudflare/wrangler-action@v3
         with:
+          wranglerVersion: "4.50.0"
           workingDirectory: "backend"
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
