--- a/.github/workflows/publish_documentation.yml
+++ b/.github/workflows/publish_documentation.yml
@@ -45,7 +45,7 @@ jobs:
           node-version: 23.9.0
 
       - name: Install dependencies
-        run: cd frontend && pnpm install
+        run: cd frontend && pnpm install && pnpm -r build
 
       # Compile with typescript documentation.
       - name: Compile documentation.
