rm yarn.lock and specify command worker

--- a/.github/workflows/publish_documentation.yml
+++ b/.github/workflows/publish_documentation.yml
@@ -60,5 +60,6 @@ jobs:
           wranglerVersion: "4.50.0"
           workingDirectory: "frontend"
           packageManager: pnpm
+          command: pages deploy public/ --project-name=adishwar-rishi-website
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
